--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,7 @@ permissions:
 
 env:
   # Common variables (secrets should be set in GitHub)
+  ACR_NAME: ${{ secrets.ACR_NAME }}
   ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
 
 jobs:
@@ -52,7 +53,8 @@ jobs:
 
       - name: Log in to Azure Container Registry
         run: |
-          az acr login --name ${{ env.ACR_LOGIN_SERVER }}
+          # Use ACR_NAME for CLI authentication (standard handling)
+          az acr login --name ${{ env.ACR_NAME }}
 
       # ---------------------------------------------------------------------
       # 1. Retag Current Image
@@ -65,14 +67,14 @@ jobs:
           echo "Checking if image ${{ env.ACR_LOGIN_SERVER }}/${{ env.REPO_NAME }}:${{ env.TAG }} exists..."
           
           # Check if the tag exists
-          EXISTS=$(az acr repository show-tags --name ${{ env.ACR_LOGIN_SERVER }} --repository ${{ env.REPO_NAME }} --query "contains([], '${{ env.TAG }}')" -o tsv)
+          EXISTS=$(az acr repository show-tags --name ${{ env.ACR_NAME }} --repository ${{ env.REPO_NAME }} --query "contains([], '${{ env.TAG }}')" -o tsv)
           
           if [ "$EXISTS" == "true" ]; then
             echo "Image exists. Retagging ${{ env.TAG }} to ${{ env.PREV_TAG }}..."
             # Use 'az acr import' to copy/retag images within the same registry (efficient and server-side)
             # --force allows overwriting the existing -prev tag
             az acr import \
-              --name ${{ env.ACR_LOGIN_SERVER }} \
+              --name ${{ env.ACR_NAME }} \
               --source ${{ env.REPO_NAME }}:${{ env.TAG }} \
               --image ${{ env.REPO_NAME }}:${{ env.PREV_TAG }} \
               --force
@@ -86,6 +88,7 @@ jobs:
       # ---------------------------------------------------------------------
       - name: Build and Push Docker Image
         run: |
+          # Determine the image URI using the full login server
           IMAGE_URI="${{ env.ACR_LOGIN_SERVER }}/${{ env.REPO_NAME }}:${{ env.TAG }}"
           
           echo "Building $IMAGE_URI..."
@@ -120,15 +123,15 @@ jobs:
           echo "Cleaning up old images for repository: ${{ env.REPO_NAME }}"
           
           # Get the digests of the tags we want to keep
-          KEEP_DIGEST_1=$(az acr repository show --name ${{ env.ACR_LOGIN_SERVER }} --image ${{ env.REPO_NAME }}:${{ env.TAG }} --query digest -o tsv || echo "none")
-          KEEP_DIGEST_2=$(az acr repository show --name ${{ env.ACR_LOGIN_SERVER }} --image ${{ env.REPO_NAME }}:${{ env.PREV_TAG }} --query digest -o tsv || echo "none")
+          KEEP_DIGEST_1=$(az acr repository show --name ${{ env.ACR_NAME }} --image ${{ env.REPO_NAME }}:${{ env.TAG }} --query digest -o tsv || echo "none")
+          KEEP_DIGEST_2=$(az acr repository show --name ${{ env.ACR_NAME }} --image ${{ env.REPO_NAME }}:${{ env.PREV_TAG }} --query digest -o tsv || echo "none")
           
           echo "Keeping digest for ${{ env.TAG }}: $KEEP_DIGEST_1"
           echo "Keeping digest for ${{ env.PREV_TAG }}: $KEEP_DIGEST_2"
           
           # List all manifests (digests) in the repository
           # Ordered by time is nice for logging, but we process all.
-          MANIFESTS=$(az acr repository show-manifests --name ${{ env.ACR_LOGIN_SERVER }} --repository ${{ env.REPO_NAME }} --query "[].digest" -o tsv)
+          MANIFESTS=$(az acr repository show-manifests --name ${{ env.ACR_NAME }} --repository ${{ env.REPO_NAME }} --query "[].digest" -o tsv)
           
           for DIGEST in $MANIFESTS; do
             if [ "$DIGEST" == "$KEEP_DIGEST_1" ] || [ "$DIGEST" == "$KEEP_DIGEST_2" ]; then
@@ -136,6 +139,6 @@ jobs:
             else
               echo "Deleting $DIGEST..."
               # --yes to bypass confirmation prompt
-              az acr repository delete --name ${{ env.ACR_LOGIN_SERVER }} --image ${{ env.REPO_NAME }}@$DIGEST --yes
+              az acr repository delete --name ${{ env.ACR_NAME }} --image ${{ env.REPO_NAME }}@$DIGEST --yes
             fi
           done
