Workflow ACR healthcheck edited

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,6 +52,7 @@ jobs:
           fi
 
       - name: Check ACR Health
+        continue-on-error: true
         run: |
           az acr check-health -n ${{ env.ACR_NAME }} --yes
 
